package com.example.plantsvszombies

abstract class ActiveDefense : Defense(), Attack{
}